--- a/doctors/templates/doctors/pages/customer_profile.html
+++ b/doctors/templates/doctors/pages/customer_profile.html
@@ -1,33 +1,110 @@
 {% extends 'doctors/doctors_base_layout/layout.html' %}
 {% block content %}
 <div class="row">
-<div class="col-lg-4">
-    <div class="text-center card-box">
-        <div class="member-card pt-2 pb-2">
-            <a href="/media/{{customer.profile_pic}}"><div class="thumb-lg member-thumb mx-auto"><img src="/media/{{customer.profile_pic}}" class="rounded-circle img-thumbnail img-fluid" alt="profile-image"></div></a>
-            <div class="">
-                
-                <h4>{{customer.username}}</h4>
-
-                <p class="text-muted">{{customer.email}}</p>
+    <div class="col-lg-4">
+        <div class="text-center card-box">
+            <div class="member-card pt-2 pb-2">
+                <a href="/media/{{customer.profile_pic}}"><div class="thumb-lg member-thumb mx-auto"><img src="/media/{{customer.profile_pic}}" class="rounded-circle img-thumbnail img-fluid" alt="profile-image"></div></a>
+                <div class="">
+                    
+                    <h4>{{customer.username}}</h4>
+                    <a class="dropdown-item" style = "border-radius: 10px;" href="#" id = 'email' data-toggle="modal" data-target="#sent_email_modal">
+                        {{customer.email}}
+                    </a>
+                    <div style = "background-color: none; border-radius: 5px;" id = "progress">
+                        
+                    </div>
+                    
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="col-md-8" style = "height: 600px;">
-    <div class = "container-fluid" style = "position:absolute">
-        <table class = "table table-striped">
-            <tr style="background-color:#D4E6F1;"><th colspan="2"><h2> Customer Details</h2></th></tr>
-            <tr style = "font-size:25px;"><td>First Name :</td><td>{{customer.first_name}}</td></tr>
-            <tr style = "font-size:25px;"><td>Last Name :</td><td>{{customer.last_name}}</td></tr>
-            <tr style = "font-size:25px;"><td>Contact Number :</td><td>{{customer.contact_number}}</td></tr>
-            <tr style = "font-size:25px;"><td>Adress Barangay :</td><td>{{customer.address_barangay}}</td></tr>
-            <tr style = "font-size:25px;"><td>Adress Municipality :</td><td>{{customer.address_municipality}}</td></tr>
-            <tr style = "font-size:25px;"><td>Pets Owned :</td><td><a href="{% url 'doctors:pets_list_view' %}?filter={{customer.id}}">{{pets_count}}</a></td></tr>
-            <tr style = "font-size:25px;"><td>Added by :</td><td>{{customer.added_by}}</td></tr>
-            <tr style = "font-size:25px;"><td>Joined at :</td><td>{{customer.created_at}}</td></tr>
-        </table>
+    <div class="col-md-8" style = "height: 600px;">
+        <div class = "container-fluid" style = "position:absolute">
+            <table class = "table table-striped">
+                <tr style="background-color:#D4E6F1;"><th colspan="2"><h2> Customer Details</h2></th></tr>
+                <tr style = "font-size:25px;"><td>First Name :</td><td>{{customer.first_name}}</td></tr>
+                <tr style = "font-size:25px;"><td>Last Name :</td><td>{{customer.last_name}}</td></tr>
+                <tr style = "font-size:25px;"><td>Contact Number :</td><td>{{customer.contact_number}}</td></tr>
+                <tr style = "font-size:25px;"><td>Adress Barangay :</td><td>{{customer.address_barangay}}</td></tr>
+                <tr style = "font-size:25px;"><td>Adress Municipality :</td><td>{{customer.address_municipality}}</td></tr>
+                <tr style = "font-size:25px;"><td>Pets Owned :</td><td><a href="{% url 'doctors:pets_list_view' %}?filter={{customer.id}}">{{pets_count}}</a></td></tr>
+                <tr style = "font-size:25px;"><td>Added by :</td><td>{{customer.added_by}}</td></tr>
+                <tr style = "font-size:25px;"><td>Joined at :</td><td>{{customer.created_at}}</td></tr>
+            </table>
+        </div>
     </div>
+    <!-- send email modal -->
+    <div class="modal fade" id="sent_email_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Send Email</h5>
+              <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form></form>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="recipient" class="col-form-label">From:</label>
+                        <input type="text" class="form-control" value = "beastfriendveterinaryclinic@gmail.com" id="recipient" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipient" class="col-form-label">To:</label>
+                        <input type="text" class="form-control" value = "{{customer.email}}" id="recipient" readonly>
+                    </div>
+                    <div class="mb-3" id = "error">
+                        
+                    </div>
+                    <div class="mb-3">
+                        <label for="subject" class="col-form-label">Subject:</label>
+                        <input type="text" class="form-control" value = "" id="subject" required>
+                    </div>
+                    <div class="mb-3">
+                    <label for="message" class="col-form-label">Message:</label>
+                    <textarea class="form-control" id="message" required></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                <button id = "send" type="submit" class="btn btn-primary">Send message</button>
+                </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- end modal -->
+    <script>
+        $(document).ready(function(){
+            $('#send').click(function(){
+                let recipient = $('#recipient').val()
+                let message = $.trim($('#message').val())
+                let subject = $.trim($('#subject').val())
+                if(subject != '' && message != ''){
+                    $('#sent_email_modal').modal('toggle')
+                    $('#progress').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Sending</div>');
+                    $.ajax({
+                            type : 'POST',
+                            url : "{% url 'doctors:send_email_view' %}",
+                            data :{
+                                recipient:recipient,
+                                message:message,
+                                subject:subject
+                            },
+                            success:function(data){
+                                $('#progress').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">'+data+'</div>');
+                                setTimeout(function(){
+                                    $('#progress').html('');
+                                }, 5000);
+                                $('#error').html('');
+                                $('#message').val('');
+                                $('#subject').val('');
+                            },
+                        });
+                }else{
+                    $('#error').html('<label class="col-form-label  text-danger">Please fill all fields</label>')
+                }      
+            });
+        });
+    </script>
 </div>
-</div>
+
 {% endblock %}
