--- a/customers/templates/base_layout/layout.html
+++ b/customers/templates/base_layout/layout.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    {% block style %}
+
+      {% endblock %}
     <title>
       {% block title %}
 
@@ -36,7 +39,7 @@
               <a class="nav-link nav-menu_font_size" id = "home" href="{% url 'customers:home_view' %}">Home</a>
               <a class="nav-link nav-menu_font_size" href="{% url 'customers:blogs_view' %}">Blogs</a>
               <a class="nav-link nav-menu_font_size" href="#">Services</a>
-              <a class="nav-link nav-menu_font_size" href="/appointments/" tabindex="-1">Appointments</a>
+              <a class="nav-link nav-menu_font_size" href="{% url 'customers:appointment_view' %}">Appointments</a>
               <a class="nav-link nav-menu_font_size" style = "margin-right:20px" href="{% url 'customers:dashboard_view' %}">Accounts</a>
               {% if user.is_authenticated and user.user_type == 3 %}
               <span class="nav-link nav-menu_font_size">{{ user }}</span>
