--- a/customers/templates/pages/appointment.html
+++ b/customers/templates/pages/appointment.html
@@ -1,44 +1,137 @@
 {% extends '.\base_layout/layout.html' %}
 {% load static %}
+{% block style %}
+  <style>
+    body
+      {
+        background-color:#5fcf80;
+      }
+      #body_header
+      {
+
+        width:auto;
+        margin:0px auto;
+        text-align:center;
+        font-size:25px;
+      }
+      form {
+        max-width: 300px;
+        margin: 10px auto;
+        padding: 10px 20px;
+        background: #f4f7f8;
+        border-radius: 8px;
+      }
+
+      h1 {
+        margin: 0 0 30px 0;
+        text-align: center;
+      }
+
+      input[type="text"],
+      input[type="date"],
+      input[type="datetime"]{
+        background: rgba(255,255,255,0.1);
+        border: none;
+        font-size: 16px;
+        height: auto;
+        margin: auto;
+        outline: 0;
+        padding: 8px;
+        width: 100%;
+        background-color: #e8eeef;
+        color: black;
+        box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+        margin-bottom: 30px;
+      }
+
+      button {
+        padding: 19px 39px 18px 39px;
+        color: #FFF;
+        background-color: #4bc970;
+        font-size: 18px;
+        text-align: center;
+        font-style: normal;
+        border-radius: 5px;
+        width: 100%;
+        border: 1px solid #3ac162;
+        border-width: 1px 1px 3px;
+        box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+        margin-bottom: 10px;
+      }
+
+      fieldset {
+        margin-bottom: 30px;
+        border: none;
+      }
+
+      legend {
+        font-size: 1.4em;
+        margin-bottom: 10px;
+      }
+
+      label {
+        display: block;
+        margin-bottom: 8px;
+      }
+
+      label.light {
+        font-weight: 300;
+        display: inline;
+      }
+        form {
+          max-width: 480px;
+        }
+  </style>
+{% endblock %}
+{% block title %}
+    Appointment
+{% endblock %}
 {% block content %}
 <br><br><br>
-<div class="container">
-    <div class="container col-lg-6">
-      <form class = "bg-light" style = "border-radius:10px; padding: 20px">
-          <h1 class = "text-center" style = "margin-bottom:20px">Appointment</h1>
-          <div class="form-group row" style = "margin-bottom:10px">
-            <label for="appointment_description" class="col-sm-3 col-form-label">Appointment description </label>
-            <div class="col-sm-8">
-              <textarea class="form-control" id="appointment_description">
-               
-              </textarea>
-            </div>
-          </div>
-          <div class="form-group row"  style = "margin-bottom:10px">
-            <label for="date" class="col-sm-3 col-form-label">Date </label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="date">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="time" class="col-sm-3 col-form-label">Time </label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="time">
-            </div>
-          </div>
-          <div class="form-group row" style = "margin-top:10px;">
-            <label for="inputPassword" class="col-sm-3 col-form-label text-end"></label>
-            <div class="col-sm-8">
-              <input type="submit" class="btn form-control" style = "background-color:#b4a7af" value = "Submit">
-              <a class = "forgot-password" href="">Previous Appointments</a>
-            </div>
-          </div>
-      </form>
+  <div id="container">
+    <!--This is a division tag for body container-->
+    <div id="body_header">
+      <!--This is a division tag for body header-->
+      <h1>Appointment Request Form</h1>
+      <p>Make your appointments more easier</p>
+
     </div>
-</div>
+    <form action="index.html" method="post">
+      <fieldset>
+
+        {% for fields in form %}
+          <div class="form-group">
+            <label for="name">{{fields.label}}*:</label>
+            {% if fields.name == 'description' %}
+              <textarea class = "form-control" name="{{fields.name}}" id="{{fields.name}}" >
+
+              </textarea>
+            {% else %}
+              <input class = "form-control" type="text" id="{{fields.name}}" name="{{fields.name}}" required">
+            {% endif %}
+          </div>
+            {% endfor %}
+      </fieldset>
+      <button type="submit">Request For Appointment</button>
+    </form>
+  </div>
+
+
 <div style = "height:250px">
 
 </div>
-
-<script src="{% static 'js/appointment.js' %}"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+<script>
+  $(document).ready(function(){
+    $('#date').click(function(){
+      alert('Yes')
+    })
+  })
+</script>
 {% endblock %}
