--- a/doctors/templates/doctors/pages/appointment_list.html
+++ b/doctors/templates/doctors/pages/appointment_list.html
@@ -12,35 +12,57 @@
               </div>
               <div class="card-body p-0">
                 <div class="table-responsive table-invoice">
-                  <table class="table table-striped">
-                    <tbody><tr>
-                      <th>Customer Name</th>
-                      <th>Description</th>
-                      <th>Status</th>
-                      <th>Schedule</th>
-                      <th>Action</th>
-                    </tr>
-                    {% for appointment in appointment_list %}
-                    <tr>
-                      <td><a href="#">{{appointment.customer}}</a></td>
-                      <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
-                      <td>{% if appointment.status == 1 %}
-                            <div class="badge badge-success">{{appointment.status}}</div>
-                          {% elif appointment.status == 2 %}
-                            <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">{{appointment.status}}</div>
-                          {% else %}
-                            <div class="badge badge-warning">Unmark</div>
-                          {% endif %}
-                      </td>  
-                      <td>{{appointment.schedule}}</td>
-                      <td>
-                        <a href="#" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="top" title="Approve" data-original-title="Approve"><i class="fas fa-check"></i></a>
-                        <a href="#" class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></a>
-                        <a href="#" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></a>
-                        
-                      </td>
-                    </tr>
-                    {% endfor %}
+                  <table  class="table table-striped">
+                    <div id="loader">
+                     
+                    </div>
+                    <tbody id = "tablebody"><tr>
+                        <th>Customer Name</th>
+                        <th>Description</th>
+                        <th>Status</th>
+                        <th>Schedule</th>
+                        <th>Action</th>
+                      </tr>
+                      {% for appointment in appointment_list %}
+                      <tr>
+                        {% if appointment.status != 1 %}
+                          <td><a href="#">{{appointment.customer}}</a></td>
+                          <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
+                          <td>{% if appointment.status == 1 %}
+                                <div class="badge badge-success">Approved</div>
+                              {% elif appointment.status == 2 %}
+                                <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
+                              {% else %}
+                                <div class="badge badge-warning">Unmark</div>
+                              {% endif %}
+                          </td>  
+                          <td>{{appointment.schedule}}</td>
+                          <td>
+                            <button class="btn btn-success btn-sm" value="{{appointment.id}}" onclick="approve(this)" data-toggle="tooltip" data-placement="top" title="Approve" data-original-title="Approve"><i class="fas fa-check"></i></button>
+                            <button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
+                            <button class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
+                            
+                          </td>
+                        {% else %}
+                          <td><a href="#">{{appointment.customer}}</a></td>
+                            <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
+                            <td>{% if appointment.status == 1 %}
+                                  <div class="badge badge-success">Approved</div>
+                                {% elif appointment.status == 2 %}
+                                  <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
+                                {% else %}
+                                  <div class="badge badge-warning">Unmark</div>
+                                {% endif %}
+                            </td>  
+                            <td>{{appointment.schedule}}</td>
+                            <td>
+                              <button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
+                              <button class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
+                              
+                            </td>
+                        {% endif %}
+                      </tr>
+                      {% endfor %}
                   </tbody></table>
                 </div>
               </div>
@@ -82,7 +104,50 @@
         $('#close').click(function(){
             $('#read_more').modal('hide');
         });
+        
     });
+    function approve(button){
+      document.querySelector('#loader').innerHTML=' <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px; " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Processing...</div>';
+      let row = button.parentNode.parentNode;
+      let tr = document.createElement('tr');
+
+      let otd1 = row.cells[0].innerHTML;
+      let otd2 = row.cells[1].innerHTML;
+
+      let otd4 = row.cells[3].innerHTML;
+      let otd5 = row.cells[4].innerHTML;
+
+      let td1 = tr.appendChild(document.createElement('td'));
+      let td2 = tr.appendChild(document.createElement('td'));
+      let td3 = tr.appendChild(document.createElement('td'));
+      let td4 = tr.appendChild(document.createElement('td'));
+      let td5 = tr.appendChild(document.createElement('td'));
+
+      td1.innerHTML=otd1;
+      td2.innerHTML=otd2;
+      td3.innerHTML='<div class="badge badge-success">Approved</div>';
+      td4.innerHTML=otd4;
+      td5.innerHTML='<button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class="fas fa-calendar-alt"></i></button>&nbsp;<button class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>';
+      $(document).ready(function(){
+        $.ajax({
+            type:"POST",
+            url:"{% url 'doctors:approve_appointment_view' %}",
+            data:{
+                appointment_id:button.value
+            },
+            success:function(response){
+                $('#loader').html(`<div class = "alert alert-success">${response}</div>`)
+                document.querySelector('#tablebody').replaceChild(tr, row);
+                setTimeout(() => {
+                  $('#loader').html("");
+                }, 3000);
+              }
+        })
+      })
+    }
+    function show_alert(){
+      alert('show')
+    }
     </script>
 
 {% endblock %}
